comment out some itmse

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                     <li>Someone Like you</li>
                     <li>Rolling In the deep</li>
                     <li>Set fire to the Rain</li>
-                    <li>Chasing Pavements</li>
+                    <!-- <li>Chasing Pavements</li>
                     <li>When we were Young</li>
                     <li>Rumor Has it</li>
-                    <li>Make you fell My love</li>
+                    <li>Make you fell My love</li> -->
                 </ol>
         </main>
 <h2> Login for many more <strong>Awesome<strong> music lists... </h2>
